--- a/Art.html
+++ b/Art.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href = "Art.css" rel = "stylesheet" type = "text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    
     <h1><a href = "index.html">Jennifer Light</a></h1>
+    <nav>
     <ul>
     <h3><a href = "Academics.html">Academics</a></h3>
     <h3><a href = "Art.html">Art</a></h3>
     <h3><a href = "Contact.html">Contact</a></h3>
     </ul> 
+    </nav>
 
     <h2>Art</h2>
-    <p>This is the Art section. I will write it later.</p>
+    <ul>
+        <img src = "arts/IMG_6345 (1).jpg" alt = "Painting of a woman" width = 800><img>
+        <img src = "arts/IMG_6227 (1).jpg" alt = "Genesee Falls" width = 800><img>
+        <img src = "arts/IMG_5984.jpg" alt = "Disintegration of Time" width = 800><img>
+        <img src = "arts/IMG_2052 (1).jpg" alt = "dog portrait" width = 800><img>
+        <img src = "arts/FullSizeRender.jpg" alt = "painting of my friend Vaishu" width = 800><img>
+        <img src = "arts/IMG_1667 (1).jpg" alt = "Painting of Lucky" width = 800><img>
+
+    </ul>
     
 </body>
 </html>
