--- a/Contact.html
+++ b/Contact.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href = "Contact.css" rel = "stylesheet" type = "text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jennifer Light</title>
 </head>
 <body>
+    
     <h1><a href = "index.html">Jennifer Light</a></h1>
+    <nav>
     <ul>
     <h3><a href = "Academics.html">Academics</a></h3>
     <h3><a href = "Art.html">Art</a></h3>
     <h3><a href = "Contact.html">Contact</a></h3>
     </ul> 
+    </nav>
 
     <h2>Contact</h2>
-    <p>This is the Contact section. I will write it later.</p>
+    <p> Below is my contact information if you ever want to get in touch with me!</p>
+    <ul>
+        <h4>Email address: jlight30@gatech.edu</h4>
+        <h4>Phone number: 678-978-4056</h4>
+    </ul>
     
 </body>
 </html>
