--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href = "index.css" rel = "stylesheet" type = "text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +9,24 @@
 </head>
 <body>
     <h1><a href = "index.html">Jennifer Light</a></h1>
+    <nav>
     <ul>
     <h3><a href = "Academics.html">Academics</a></h3>
     <h3><a href = "Art.html">Art</a></h3>
     <h3><a href = "Contact.html">Contact</a></h3>
     </ul> 
+    </nav>
+    
 
     <h2>About Me</h2>
-    <p> My name is Jennifer Light and I am a third year undergraduate student at Georgia Tech majoring in Computational Media.  </p>
+    <p> Hello and welcome to my website! My name is Jennifer Light and I am a third year undergraduate student at Georgia Tech majoring in Computational Media. This is a blended degree that combines computer science with the liberal arts, specificallly media, design, and communications.  </p>
 
-    <p> I just recently joined the Computational Media Major and having a lot of fun learning about about computer science, websites, and design. I love creating art, and am hoping to integrate my creativity into my future work. My favorite medium is oil paint, and my favorite subject to paint are portraits. I have recently entered the world of digital art, and am slowly becoming more comfortable with mediums like Photoshop and Animate. </p>
+    <p> I just recently joined this major and am having a lot of fun learning about about computer science, websites, and design. I love creating art, especially portraits, and my favorite medium is oil paint. I am also in the process of learning how to use digital art resources like Photoshop and Adobe Animate. </p>
 
-    <p> For my first two years here at Tech, I was studying Earth and Atmospheric Sciences. While I eventually realized that path wasn't right for me, it has taught me a lot about our Earth and grown my passion for sustainability. </p>
+    <p> I was an Earth and Atmospheric Sciences major for my first two years of college, but I eventually chose a different path. Being a part of that program did teach me a lot about our Earth and has grown my passion for sustainability.  </p>
 
-    <p> Outside of school, one of my favorite things to do in my free time is play volleyball. I joined the club volleyball team my second year at Georgia Tech and it has been one of my best decisions. It gives me the oppotunity to meet new friends and get exercise while playing a sport that I love.  </p>
+    <p> Outside of school, one of my favorite things to do in my free time is play volleyball. I joined the club volleyball team my second year at Georgia Tech and it has been one of the best decisions I have made since I got to college. I love how low-stress it is, and it's a great way to get all of my energy out at the end of the day. </p>
 
 </body>
 </html>
+
