--- a/Academics.html
+++ b/Academics.html
@@ -8,29 +8,33 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href = "index.html">Jennifer Light</a></h1>
-    <nav>
-    <ul>
-    <h3><a href = "Academics.html">Academics</a></h3>
-    <h3><a href = "Art.html">Art</a></h3>
-    <h3><a href = "Contact.html">Contact</a></h3>
-    </ul> 
-    </nav>
-
-    <h2>Academics</h2>
-    <p> I am a third year undergraduate student at the Georgia Institute of Technology. I am planning to graduate in the Spring of 2025. My major is Computational Media and my Minor is Earth and Atmospheric Sciences.
-    </p>
+    <div class = "container">
+        <div class = "bar">
+            <img src = "images/bar.png" alt = "nav bar" width = 1500><img>
+            <div class = "navBar">
+                <nav>
+                    <ul>
+                    <h1><a href = "index.html">Jennifer Light</a></h1>
+                    <h3><a href = "Academics.html">Academics</a></h3>
+                    <h3><a href = "Art.html">Art</a></h3>
+                    <h3><a href = "Contact.html">Contact</a></h3>
+                    </ul> 
+                </nav>
+            </div>
+        </div>    
+        <h2>~ Academics ~</h2>
+        <p> I am a third year undergraduate student at the Georgia Institute of Technology. I am planning to graduate in the Spring of 2025. My major is Computational Media and my Minor is Earth and Atmospheric Sciences.
+        </p>
         
-    <p>I am currently employed by Georgia Tech as a Teaching Assistant for the lab period of "Introduction to Earth Processes." As a lab TA, I host labs where I give lectures on material, guide students through the lab, and answer questions.</p>
+        <p>I am currently employed by Georgia Tech as a Teaching Assistant for the lab period of "Introduction to Earth Processes." As a lab TA, I host labs where I give lectures on material, guide students through the lab, and answer questions.</p>
 
-    <p>One of my favorite projects I've been involved with has been as a member of the Student Government, working on the Sustainability sector to tackle issues like waste during game days, student outreach, and holding meetings with other sustainabiloty focused groups on campus.
-    </p>
+        <p>One of my favorite projects I've been involved with has been as a member of the Student Government, working on the Sustainability sector to tackle issues like waste during game days, student outreach, and holding meetings with other sustainabiloty focused groups on campus.
+        </p>
 
-    <p>For more about me, check out my resume here:
-    <a href = "Microsoft Word - J_Light Resume 2022.docx.pdf">Jennifer_Light_Resume</a>
-    </p>
-
-</p>
+        <p>For more about me, check out my resume here:
+        <a href = "Microsoft Word - J_Light Resume 2022.docx.pdf">Jennifer_Light_Resume</a>
+        </p> 
+    </div>
     
 </body>
 </html>
