--- a/Contact.html
+++ b/Contact.html
@@ -8,22 +8,28 @@
     <title>Jennifer Light</title>
 </head>
 <body>
+    <div class = "container">
+        <div class = "bar">
+            <img src = "images/bar.png" alt = "nav bar" width = 1500><img>
     
-    <h1><a href = "index.html">Jennifer Light</a></h1>
-    <nav>
-    <ul>
-    <h3><a href = "Academics.html">Academics</a></h3>
-    <h3><a href = "Art.html">Art</a></h3>
-    <h3><a href = "Contact.html">Contact</a></h3>
-    </ul> 
-    </nav>
-
-    <h2>Contact</h2>
-    <p> Below is my contact information if you ever want to get in touch with me!</p>
-    <ul>
+            <div class = "navBar">
+                <nav>
+                <ul>
+                <h1><a href = "index.html">Jennifer Light</a></h1>
+                <h3><a href = "Academics.html">Academics</a></h3>
+                <h3><a href = "Art.html">Art</a></h3>
+                <h3><a href = "Contact.html">Contact</a></h3>
+                </ul> 
+                </nav>
+            </div>
+        </div>
+        <h2>~ Contact ~</h2>
+        <p> Below is my contact information if you ever want to get in touch with me!</p>
+        <ul>
         <h4>Email address: jlight30@gatech.edu</h4>
         <h4>Phone number: 678-978-4056</h4>
-    </ul>
+        </ul>
+    </div>
     
 </body>
 </html>
